Bug 287314 - crash dolphin when i start hidden folders
Summary: crash dolphin when i start hidden folders
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.99
Platform: Chakra Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 287955 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-22 23:13 UTC by Francesco
Modified: 2011-12-08 10:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francesco 2011-11-22 23:13:10 UTC
Application: dolphin (1.99)
KDE Platform Version: 4.7.3 (4.7.3)
Qt Version: 4.7.4
Operating System: Linux 3.1-CHAKRA i686
Distribution: "Chakra Linux"

-- Information about the crash:
- What I was doing when the application crashed:

When I start hidden folders, dolphin crash , this problem always happens

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb589b930 (LWP 2914))]

Thread 2 (Thread 0xaf74eb70 (LWP 2915)):
#0  0xb5cbdd00 in clock_gettime () from /lib/librt.so.1
#1  0xb6e4db35 in ?? () from /usr/lib/libQtCore.so.4
#2  0xb6f202d6 in ?? () from /usr/lib/libQtCore.so.4
#3  0xb6f2062a in ?? () from /usr/lib/libQtCore.so.4
#4  0xb6f1ee73 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb6f1ef0d in ?? () from /usr/lib/libQtCore.so.4
#6  0xb5c24a3e in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#7  0xb5c258f3 in ?? () from /usr/lib/libglib-2.0.so.0
#8  0xb5c25fc4 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#9  0xb6f1f957 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#10 0xb6ef073d in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0xb6ef0981 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0xb6df42cb in QThread::exec() () from /usr/lib/libQtCore.so.4
#13 0xb6ed139d in ?? () from /usr/lib/libQtCore.so.4
#14 0xb6df7123 in ?? () from /usr/lib/libQtCore.so.4
#15 0xb6d80cf7 in start_thread () from /lib/libpthread.so.0
#16 0xb617c86e in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb589b930 (LWP 2914)):
[KCrash Handler]
#7  0xb54f6348 in KFileItem::determineMimeType() const () from /usr/lib/libkio.so.5
#8  0xb0729c14 in KFileItemModelRolesUpdater::startPreviewJob(KFileItemList const&) () from /usr/lib/libdolphinprivate.so.4
#9  0xb072be83 in KFileItemModelRolesUpdater::resolvePendingRoles() () from /usr/lib/libdolphinprivate.so.4
#10 0xb072da74 in KFileItemModelRolesUpdater::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libdolphinprivate.so.4
#11 0xb6ef7acd in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#12 0xb6f068aa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#13 0xb6f55575 in QTimer::timeout() () from /usr/lib/libQtCore.so.4
#14 0xb6f0e0c6 in QTimer::timerEvent(QTimerEvent*) () from /usr/lib/libQtCore.so.4
#15 0xb6f097d4 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#16 0xb6445764 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#17 0xb644ab13 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#18 0xb762d0b1 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#19 0xb6ef16fe in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#20 0xb6f21a20 in ?? () from /usr/lib/libQtCore.so.4
#21 0xb6f1ef42 in ?? () from /usr/lib/libQtCore.so.4
#22 0xb5c25532 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#23 0xb5c25d10 in ?? () from /usr/lib/libglib-2.0.so.0
#24 0xb5c25fc4 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#25 0xb6f1f8fa in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#26 0xb64f8a7a in ?? () from /usr/lib/libQtGui.so.4
#27 0xb6ef073d in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#28 0xb6ef0981 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#29 0xb6ef50ed in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#30 0xb64435d4 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#31 0xb08e4ae1 in kdemain () from /usr/lib/libkdeinit4_dolphin.so
#32 0x0804f90a in _start ()

Possible duplicates by query: bug 282340.

Reported using DrKonqi
Comment 1 Francesco 2011-11-22 23:15:15 UTC
this is kde 4.8 in chakra..
Comment 2 Francesco 2011-11-22 23:31:35 UTC
wanted to say kde 4.7.3
Comment 3 Peter Penz 2011-12-02 13:11:59 UTC
*** Bug 287955 has been marked as a duplicate of this bug. ***
Comment 4 Yeqin 2011-12-02 13:39:02 UTC
Sorry, It's Chakra KDE 4.8 Pre. Thank you all of you.
Comment 5 Peter Penz 2011-12-08 10:13:43 UTC
Git commit bcf5697fbd09171a6b63599c09923a17b1524d14 by Peter Penz.
Committed on 08/12/2011 at 11:05.
Pushed by ppenz into branch 'master'.

Fix "show hidden files" issues

Use KFileItemModel instead of KDirLister for toggling the whether
hidden files should be shown. This assures that the signal
KFileItemModel::loadingCompleted() will be emitted.

In the longterm Dolphin should only use the KFileItemModel, so that
the KDirLister instance is used only internally as implementation
detail in KFileItemModel. Although there are only a few cases left
where KDirLister is used instead of KFileItemModel this cleanup
will be postponed to after the 4.8 release...

BUG: 287314
BUG: 288213
FIXED-IN: 4.8.0

M  +18   -0    dolphin/src/kitemviews/kfileitemmodel.cpp
M  +19   -0    dolphin/src/kitemviews/kfileitemmodel.h
M  +2    -3    dolphin/src/panels/folders/folderspanel.cpp
M  +3    -5    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/bcf5697fbd09171a6b63599c09923a17b1524d14